# cargo-trim

./: .clog.toml  .gitignore  .mergify.yml  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  Makefile.toml  README.MD  bors.toml  justfile  renovate.json
.chglog/: config.yml
.github/workflows/: build.yml  publish.yml  release_note.yml
ci/: before_script.sh  install.sh  script.sh
scripts/: cargo_trim_command_test.sh  install_crate.sh
src/: app.rs  config_file.rs  crate_detail.rs  create_app.rs  create_dir.rs  dir_path.rs  git_dir.rs  list_crate.rs  main.rs  registry_dir.rs  test.rs  utils.rs
src/command/: clear.rs  config.rs  git.rs  init.rs  list.rs  mod.rs  registry.rs  remove.rs  set.rs  unset.rs  utils.rs
tests/: command_output.rs
tests/command_output/: completions.txt  config.txt  git.txt  help.txt  list.txt  query.txt  registry.txt  remove.txt
