[package]
name = "cargo-trim"
version = "0.14.0"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/cargo-trim"
repository = "https://github.com/iamsauravsharma/cargo-trim"
description = "Binary application to cleanup $CARGO_HOME cache"
license = "MIT"
readme = "README.MD"
edition = "2024"
keywords = ["cargo", "cache", "remove", "manage", "clean"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "cargo", "env"] }
dirs-next = "2.0.0"
owo-colors = "4.0.0"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.11"
url = { version = "2.5.0", features = ["serde"] }

[lints.rust]
anonymous_parameters = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
